# microservices

./: .gitignore  docker-compose.yml
monitoring/: grafana-datasources.yaml  otel-collector-config.yaml  tempo-config.yaml
python-service/: Dockerfile  consumer.py  main.py  producer.py  pyproject.toml  requirements.txt
