[project]
name = "python-service"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "confluent-kafka==2.6.1",
    "fastapi>=0.122.0",
    "uvicorn>=0.38.0",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-instrumentation-confluent-kafka",
]
